fixed css so images are aligned in featured work

--- a/wp-content/themes/accelerate-theme-child/style.css
+++ b/wp-content/themes/accelerate-theme-child/style.css
@@ -78,7 +78,7 @@ div.case-study-images img {
 .individual-featured-work {
     display:  inline;
     float: left;
-    padding: 20px;
+    padding: 5px;
     margin:  auto;
     
 }
